<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/TextResulte"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="right"
        android:padding="20dp"
        android:text="@string/_0"
        android:textColor="@color/Result"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@id/toggleDarkModeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <Button
        android:id="@+id/toggleDarkModeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/dark_mode_24"
        app:layout_constraintBottom_toTopOf="@id/C1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextResulte" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/C1"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toTopOf="@id/C2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleDarkModeButton">

        <Button
            android:id="@+id/BtnAc"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/ac_btn_l"
            android:fontFamily="sans-serif-black"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/BtnModelus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:id="@+id/BtnModelus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/med_btn_l"
            android:src="@drawable/percent"
            app:layout_constraintEnd_toStartOf="@id/BtnRemove"
            app:layout_constraintStart_toEndOf="@id/BtnAc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/BtnRemove"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/rem_btn_l"
            android:src="@drawable/backspace_24"
            app:layout_constraintEnd_toStartOf="@id/BtnDivid"
            app:layout_constraintStart_toEndOf="@id/BtnModelus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/BtnDivid"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/div_btn_l"
            android:src="@drawable/division"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/BtnRemove"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/C2"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toTopOf="@id/C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/C1">

        <Button
            android:id="@+id/Btn7"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_7"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/Btn8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/Btn8"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_8"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/Btn9"
            app:layout_constraintStart_toEndOf="@+id/Btn7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/Btn9"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_9"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/BtnMultiply"
            app:layout_constraintStart_toEndOf="@+id/Btn8" />

        <ImageButton
            android:id="@+id/BtnMultiply"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/mul_btn_l"
            android:src="@drawable/multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Btn9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/C3"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toTopOf="@id/C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/C2">

        <Button
            android:id="@+id/Btn4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_4"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/Btn5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/Btn5"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_5"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/Btn6"
            app:layout_constraintStart_toEndOf="@+id/Btn4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/Btn6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_6"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/BtnMinus"
            app:layout_constraintStart_toEndOf="@+id/Btn5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:id="@+id/BtnMinus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/mines_btn_l"
            android:fontFamily="sans-serif-black"
            android:src="@drawable/substract"
            android:text="@string/mineus"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/BtnPlus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Btn6"
            app:layout_constraintTop_toBottomOf="@id/BtnMultiply"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/C4"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toTopOf="@id/C5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/C3">

        <Button
            android:id="@+id/Btn1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_1"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/Btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/Btn2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_2"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/Btn3"
            app:layout_constraintStart_toEndOf="@id/Btn1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Btn3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:text="@string/_3"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/BtnPlus"
            app:layout_constraintStart_toEndOf="@id/Btn2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/BtnPlus"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/plus_btn_l"
            android:src="@drawable/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Btn3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription,MissingConstraints,RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/C5"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/C4"
        >

        <Button
            android:id="@+id/BtnInvert"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_00"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/Btn0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/Btn0"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:fontFamily="sans-serif-black"
            android:text="@string/_zero"
            android:textColor="@color/Text_l"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/BtnDot"
            app:layout_constraintStart_toEndOf="@id/BtnInvert"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/BtnDot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/btn_light"
            android:src="@drawable/dot_l"
            app:layout_constraintEnd_toStartOf="@id/BtnEqual"
            app:layout_constraintStart_toEndOf="@id/Btn0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/BtnEqual"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/equal_btn_l"
            android:src="@drawable/equal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/BtnDot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
